k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-server
  labels:
    app: live-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-server
  template:
    metadata:
      labels:
        app: live-server
    spec:
      containers:
        - name: live-server
          image: christer10/live_server:1.0.3
          ports:
            - containerPort: 8080
