k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-server
spec:
  selector:
    app: live-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
