k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: prototyne.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: live-server
                port:
                  number: 80
  tls:
    - hosts:
        - prototyne.site
      secretName: prototyne-tls
